ProyectoLenguaje/3 - TraduccionExpresiones/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> START
Rule 1     START -> PROGRAM V P S PEND
Rule 2     V -> DIM VARAUX V
Rule 3     V -> LET VARASSIGN V S
Rule 4     V -> EMPTY
Rule 5     P -> SUBPROCEDURE LPAREN ID RPAREN V P S SUBEND
Rule 6     P -> IN LPAREN NUMTYPE RPAREN S
Rule 7     P -> PRINT LPAREN NUMTYPE RPAREN S
Rule 8     P -> EMPTY
Rule 9     S -> IF LPAREN LOGE RPAREN LCURL V S RCURL IFELSE S
Rule 10    IFELSE -> ELSE LCURL S RCURL
Rule 11    IFELSE -> <empty>
Rule 12    S -> WHILE LPAREN LOGE RPAREN LCURL V S RCURL S
Rule 13    S -> DO COLON V S WHILE LPAREN LOGE RPAREN S
Rule 14    S -> FOR LPAREN LOGE COMMA LOGE RPAREN LCURL V S RCURL
Rule 15    S -> E
Rule 16    S -> EMPTY
Rule 17    VARAUX -> ID AS VARTYPE
Rule 18    VARID -> ID
Rule 19    VARASSIGN -> VARID EQUAL E
Rule 20    VARTYPE -> INT
Rule 21    VARTYPE -> FLOAT
Rule 22    VARTYPE -> VECDEF
Rule 23    VARTYPE -> MATDEF
Rule 24    NUMTYPE -> ID
Rule 25    NUMTYPE -> NINT
Rule 26    NUMTYPE -> NFLOAT
Rule 27    VAR -> NINT
Rule 28    VAR -> NFLOAT
Rule 29    VAR -> VECTOR
Rule 30    VAR -> MATRIX
Rule 31    VAR -> ID
Rule 32    VECDEF -> VEC LBRACK VAR RBRACK
Rule 33    MATDEF -> MAT LBRACK VAR RBRACK LBRACK VAR RBRACK
Rule 34    VECTOR -> ID LBRACK NUMTYPE RBRACK
Rule 35    MATRIX -> ID LBRACK NUMTYPE COMMA NUMTYPE RBRACK
Rule 36    EMPTY -> <empty>
Rule 37    E -> E PLUS T
Rule 38    E -> E MINUS T
Rule 39    E -> T
Rule 40    T -> T MULT F
Rule 41    T -> T DIV F
Rule 42    T -> F
Rule 43    F -> LPAREN E RPAREN
Rule 44    F -> NINT
Rule 45    F -> NFLOAT
Rule 46    F -> VECTOR
Rule 47    F -> MATRIX
Rule 48    F -> ID
Rule 49    LOGE -> LOGE OR LOGT
Rule 50    LOGE -> NOT LOGT
Rule 51    LOGE -> LOGT
Rule 52    LOGT -> LOGT AND LOGF
Rule 53    LOGT -> LOGF
Rule 54    LOGF -> VAR LT VAR
Rule 55    LOGF -> VAR LE VAR
Rule 56    LOGF -> VAR GT VAR
Rule 57    LOGF -> VAR GE VAR
Rule 58    LOGF -> VAR EQ VAR
Rule 59    LOGF -> VAR NE VAR
Rule 60    LOGF -> LPAREN LOGE RPAREN

Terminals, with rules where they appear

AND                  : 52
AS                   : 17
COLON                : 13
COMMA                : 14 35
DIM                  : 2
DIV                  : 41
DO                   : 13
ELSE                 : 10
EQ                   : 58
EQUAL                : 19
FLOAT                : 21
FOR                  : 14
GE                   : 57
GT                   : 56
ID                   : 5 17 18 24 31 34 35 48
IF                   : 9
IN                   : 6
INT                  : 20
LBRACK               : 32 33 33 34 35
LCURL                : 9 10 12 14
LE                   : 55
LET                  : 3
LPAREN               : 5 6 7 9 12 13 14 43 60
LT                   : 54
MAT                  : 33
MINUS                : 38
MULT                 : 40
NE                   : 59
NFLOAT               : 26 28 45
NINT                 : 25 27 44
NOT                  : 50
OR                   : 49
PEND                 : 1
PLUS                 : 37
PRINT                : 7
PROGRAM              : 1
RBRACK               : 32 33 33 34 35
RCURL                : 9 10 12 14
RPAREN               : 5 6 7 9 12 13 14 43 60
SUBEND               : 5
SUBPROCEDURE         : 5
VEC                  : 32
WHILE                : 12 13
error                : 

Nonterminals, with rules where they appear

E                    : 15 19 37 38 43
EMPTY                : 4 8 16
F                    : 40 41 42
IFELSE               : 9
LOGE                 : 9 12 13 14 14 49 60
LOGF                 : 52 53
LOGT                 : 49 50 51 52
MATDEF               : 23
MATRIX               : 30 47
NUMTYPE              : 6 7 34 35 35
P                    : 1 5
S                    : 1 3 5 6 7 9 9 10 12 12 13 13 14
START                : 0
T                    : 37 38 39 40 41
V                    : 1 2 3 5 9 12 13 14
VAR                  : 32 33 33 54 54 55 55 56 56 57 57 58 58 59 59
VARASSIGN            : 3
VARAUX               : 2
VARID                : 19
VARTYPE              : 17
VECDEF               : 22
VECTOR               : 29 46

Parsing method: LALR

state 0

    (0) S' -> . START
    (1) START -> . PROGRAM V P S PEND

    PROGRAM         shift and go to state 2

    START                          shift and go to state 1

state 1

    (0) S' -> START .



state 2

    (1) START -> PROGRAM . V P S PEND
    (2) V -> . DIM VARAUX V
    (3) V -> . LET VARASSIGN V S
    (4) V -> . EMPTY
    (36) EMPTY -> .

    DIM             shift and go to state 4
    LET             shift and go to state 5
    SUBPROCEDURE    reduce using rule 36 (EMPTY -> .)
    IN              reduce using rule 36 (EMPTY -> .)
    PRINT           reduce using rule 36 (EMPTY -> .)
    IF              reduce using rule 36 (EMPTY -> .)
    WHILE           reduce using rule 36 (EMPTY -> .)
    DO              reduce using rule 36 (EMPTY -> .)
    FOR             reduce using rule 36 (EMPTY -> .)
    LPAREN          reduce using rule 36 (EMPTY -> .)
    NINT            reduce using rule 36 (EMPTY -> .)
    NFLOAT          reduce using rule 36 (EMPTY -> .)
    ID              reduce using rule 36 (EMPTY -> .)
    PEND            reduce using rule 36 (EMPTY -> .)

    V                              shift and go to state 3
    EMPTY                          shift and go to state 6

state 3

    (1) START -> PROGRAM V . P S PEND
    (5) P -> . SUBPROCEDURE LPAREN ID RPAREN V P S SUBEND
    (6) P -> . IN LPAREN NUMTYPE RPAREN S
    (7) P -> . PRINT LPAREN NUMTYPE RPAREN S
    (8) P -> . EMPTY
    (36) EMPTY -> .

    SUBPROCEDURE    shift and go to state 8
    IN              shift and go to state 9
    PRINT           shift and go to state 10
    IF              reduce using rule 36 (EMPTY -> .)
    WHILE           reduce using rule 36 (EMPTY -> .)
    DO              reduce using rule 36 (EMPTY -> .)
    FOR             reduce using rule 36 (EMPTY -> .)
    LPAREN          reduce using rule 36 (EMPTY -> .)
    NINT            reduce using rule 36 (EMPTY -> .)
    NFLOAT          reduce using rule 36 (EMPTY -> .)
    ID              reduce using rule 36 (EMPTY -> .)
    PEND            reduce using rule 36 (EMPTY -> .)

    P                              shift and go to state 7
    EMPTY                          shift and go to state 11

state 4

    (2) V -> DIM . VARAUX V
    (17) VARAUX -> . ID AS VARTYPE

    ID              shift and go to state 13

    VARAUX                         shift and go to state 12

state 5

    (3) V -> LET . VARASSIGN V S
    (19) VARASSIGN -> . VARID EQUAL E
    (18) VARID -> . ID

    ID              shift and go to state 16

    VARASSIGN                      shift and go to state 14
    VARID                          shift and go to state 15

state 6

    (4) V -> EMPTY .

    SUBPROCEDURE    reduce using rule 4 (V -> EMPTY .)
    IN              reduce using rule 4 (V -> EMPTY .)
    PRINT           reduce using rule 4 (V -> EMPTY .)
    IF              reduce using rule 4 (V -> EMPTY .)
    WHILE           reduce using rule 4 (V -> EMPTY .)
    DO              reduce using rule 4 (V -> EMPTY .)
    FOR             reduce using rule 4 (V -> EMPTY .)
    LPAREN          reduce using rule 4 (V -> EMPTY .)
    NINT            reduce using rule 4 (V -> EMPTY .)
    NFLOAT          reduce using rule 4 (V -> EMPTY .)
    ID              reduce using rule 4 (V -> EMPTY .)
    PEND            reduce using rule 4 (V -> EMPTY .)
    SUBEND          reduce using rule 4 (V -> EMPTY .)
    RCURL           reduce using rule 4 (V -> EMPTY .)


state 7

    (1) START -> PROGRAM V P . S PEND
    (9) S -> . IF LPAREN LOGE RPAREN LCURL V S RCURL IFELSE S
    (12) S -> . WHILE LPAREN LOGE RPAREN LCURL V S RCURL S
    (13) S -> . DO COLON V S WHILE LPAREN LOGE RPAREN S
    (14) S -> . FOR LPAREN LOGE COMMA LOGE RPAREN LCURL V S RCURL
    (15) S -> . E
    (16) S -> . EMPTY
    (37) E -> . E PLUS T
    (38) E -> . E MINUS T
    (39) E -> . T
    (36) EMPTY -> .
    (40) T -> . T MULT F
    (41) T -> . T DIV F
    (42) T -> . F
    (43) F -> . LPAREN E RPAREN
    (44) F -> . NINT
    (45) F -> . NFLOAT
    (46) F -> . VECTOR
    (47) F -> . MATRIX
    (48) F -> . ID
    (34) VECTOR -> . ID LBRACK NUMTYPE RBRACK
    (35) MATRIX -> . ID LBRACK NUMTYPE COMMA NUMTYPE RBRACK

    IF              shift and go to state 18
    WHILE           shift and go to state 20
    DO              shift and go to state 21
    FOR             shift and go to state 22
    PEND            reduce using rule 36 (EMPTY -> .)
    LPAREN          shift and go to state 19
    NINT            shift and go to state 27
    NFLOAT          shift and go to state 28
    ID              shift and go to state 31

    S                              shift and go to state 17
    E                              shift and go to state 23
    EMPTY                          shift and go to state 24
    T                              shift and go to state 25
    F                              shift and go to state 26
    VECTOR                         shift and go to state 29
    MATRIX                         shift and go to state 30

state 8

    (5) P -> SUBPROCEDURE . LPAREN ID RPAREN V P S SUBEND

    LPAREN          shift and go to state 32


state 9

    (6) P -> IN . LPAREN NUMTYPE RPAREN S

    LPAREN          shift and go to state 33


state 10

    (7) P -> PRINT . LPAREN NUMTYPE RPAREN S

    LPAREN          shift and go to state 34


state 11

    (8) P -> EMPTY .

    IF              reduce using rule 8 (P -> EMPTY .)
    WHILE           reduce using rule 8 (P -> EMPTY .)
    DO              reduce using rule 8 (P -> EMPTY .)
    FOR             reduce using rule 8 (P -> EMPTY .)
    LPAREN          reduce using rule 8 (P -> EMPTY .)
    NINT            reduce using rule 8 (P -> EMPTY .)
    NFLOAT          reduce using rule 8 (P -> EMPTY .)
    ID              reduce using rule 8 (P -> EMPTY .)
    PEND            reduce using rule 8 (P -> EMPTY .)
    SUBEND          reduce using rule 8 (P -> EMPTY .)


state 12

    (2) V -> DIM VARAUX . V
    (2) V -> . DIM VARAUX V
    (3) V -> . LET VARASSIGN V S
    (4) V -> . EMPTY
    (36) EMPTY -> .

    DIM             shift and go to state 4
    LET             shift and go to state 5
    SUBPROCEDURE    reduce using rule 36 (EMPTY -> .)
    IN              reduce using rule 36 (EMPTY -> .)
    PRINT           reduce using rule 36 (EMPTY -> .)
    IF              reduce using rule 36 (EMPTY -> .)
    WHILE           reduce using rule 36 (EMPTY -> .)
    DO              reduce using rule 36 (EMPTY -> .)
    FOR             reduce using rule 36 (EMPTY -> .)
    LPAREN          reduce using rule 36 (EMPTY -> .)
    NINT            reduce using rule 36 (EMPTY -> .)
    NFLOAT          reduce using rule 36 (EMPTY -> .)
    ID              reduce using rule 36 (EMPTY -> .)
    PEND            reduce using rule 36 (EMPTY -> .)
    SUBEND          reduce using rule 36 (EMPTY -> .)
    RCURL           reduce using rule 36 (EMPTY -> .)

    V                              shift and go to state 35
    EMPTY                          shift and go to state 6

state 13

    (17) VARAUX -> ID . AS VARTYPE

    AS              shift and go to state 36


state 14

    (3) V -> LET VARASSIGN . V S
    (2) V -> . DIM VARAUX V
    (3) V -> . LET VARASSIGN V S
    (4) V -> . EMPTY
    (36) EMPTY -> .

    DIM             shift and go to state 4
    LET             shift and go to state 5
    SUBPROCEDURE    reduce using rule 36 (EMPTY -> .)
    IN              reduce using rule 36 (EMPTY -> .)
    PRINT           reduce using rule 36 (EMPTY -> .)
    IF              reduce using rule 36 (EMPTY -> .)
    WHILE           reduce using rule 36 (EMPTY -> .)
    DO              reduce using rule 36 (EMPTY -> .)
    FOR             reduce using rule 36 (EMPTY -> .)
    LPAREN          reduce using rule 36 (EMPTY -> .)
    NINT            reduce using rule 36 (EMPTY -> .)
    NFLOAT          reduce using rule 36 (EMPTY -> .)
    ID              reduce using rule 36 (EMPTY -> .)
    PEND            reduce using rule 36 (EMPTY -> .)
    SUBEND          reduce using rule 36 (EMPTY -> .)
    RCURL           reduce using rule 36 (EMPTY -> .)

    V                              shift and go to state 37
    EMPTY                          shift and go to state 6

state 15

    (19) VARASSIGN -> VARID . EQUAL E

    EQUAL           shift and go to state 38


state 16

    (18) VARID -> ID .

    EQUAL           reduce using rule 18 (VARID -> ID .)


state 17

    (1) START -> PROGRAM V P S . PEND

    PEND            shift and go to state 39


state 18

    (9) S -> IF . LPAREN LOGE RPAREN LCURL V S RCURL IFELSE S

    LPAREN          shift and go to state 40


state 19

    (43) F -> LPAREN . E RPAREN
    (37) E -> . E PLUS T
    (38) E -> . E MINUS T
    (39) E -> . T
    (40) T -> . T MULT F
    (41) T -> . T DIV F
    (42) T -> . F
    (43) F -> . LPAREN E RPAREN
    (44) F -> . NINT
    (45) F -> . NFLOAT
    (46) F -> . VECTOR
    (47) F -> . MATRIX
    (48) F -> . ID
    (34) VECTOR -> . ID LBRACK NUMTYPE RBRACK
    (35) MATRIX -> . ID LBRACK NUMTYPE COMMA NUMTYPE RBRACK

    LPAREN          shift and go to state 19
    NINT            shift and go to state 27
    NFLOAT          shift and go to state 28
    ID              shift and go to state 31

    E                              shift and go to state 41
    T                              shift and go to state 25
    F                              shift and go to state 26
    VECTOR                         shift and go to state 29
    MATRIX                         shift and go to state 30

state 20

    (12) S -> WHILE . LPAREN LOGE RPAREN LCURL V S RCURL S

    LPAREN          shift and go to state 42


state 21

    (13) S -> DO . COLON V S WHILE LPAREN LOGE RPAREN S

    COLON           shift and go to state 43


state 22

    (14) S -> FOR . LPAREN LOGE COMMA LOGE RPAREN LCURL V S RCURL

    LPAREN          shift and go to state 44


state 23

    (15) S -> E .
    (37) E -> E . PLUS T
    (38) E -> E . MINUS T

    PEND            reduce using rule 15 (S -> E .)
    SUBPROCEDURE    reduce using rule 15 (S -> E .)
    IN              reduce using rule 15 (S -> E .)
    PRINT           reduce using rule 15 (S -> E .)
    IF              reduce using rule 15 (S -> E .)
    WHILE           reduce using rule 15 (S -> E .)
    DO              reduce using rule 15 (S -> E .)
    FOR             reduce using rule 15 (S -> E .)
    LPAREN          reduce using rule 15 (S -> E .)
    NINT            reduce using rule 15 (S -> E .)
    NFLOAT          reduce using rule 15 (S -> E .)
    ID              reduce using rule 15 (S -> E .)
    SUBEND          reduce using rule 15 (S -> E .)
    RCURL           reduce using rule 15 (S -> E .)
    PLUS            shift and go to state 45
    MINUS           shift and go to state 46


state 24

    (16) S -> EMPTY .

    PEND            reduce using rule 16 (S -> EMPTY .)
    SUBPROCEDURE    reduce using rule 16 (S -> EMPTY .)
    IN              reduce using rule 16 (S -> EMPTY .)
    PRINT           reduce using rule 16 (S -> EMPTY .)
    IF              reduce using rule 16 (S -> EMPTY .)
    WHILE           reduce using rule 16 (S -> EMPTY .)
    DO              reduce using rule 16 (S -> EMPTY .)
    FOR             reduce using rule 16 (S -> EMPTY .)
    LPAREN          reduce using rule 16 (S -> EMPTY .)
    NINT            reduce using rule 16 (S -> EMPTY .)
    NFLOAT          reduce using rule 16 (S -> EMPTY .)
    ID              reduce using rule 16 (S -> EMPTY .)
    SUBEND          reduce using rule 16 (S -> EMPTY .)
    RCURL           reduce using rule 16 (S -> EMPTY .)


state 25

    (39) E -> T .
    (40) T -> T . MULT F
    (41) T -> T . DIV F

    PLUS            reduce using rule 39 (E -> T .)
    MINUS           reduce using rule 39 (E -> T .)
    PEND            reduce using rule 39 (E -> T .)
    RPAREN          reduce using rule 39 (E -> T .)
    SUBPROCEDURE    reduce using rule 39 (E -> T .)
    IN              reduce using rule 39 (E -> T .)
    PRINT           reduce using rule 39 (E -> T .)
    IF              reduce using rule 39 (E -> T .)
    WHILE           reduce using rule 39 (E -> T .)
    DO              reduce using rule 39 (E -> T .)
    FOR             reduce using rule 39 (E -> T .)
    LPAREN          reduce using rule 39 (E -> T .)
    NINT            reduce using rule 39 (E -> T .)
    NFLOAT          reduce using rule 39 (E -> T .)
    ID              reduce using rule 39 (E -> T .)
    SUBEND          reduce using rule 39 (E -> T .)
    RCURL           reduce using rule 39 (E -> T .)
    DIM             reduce using rule 39 (E -> T .)
    LET             reduce using rule 39 (E -> T .)
    MULT            shift and go to state 47
    DIV             shift and go to state 48


state 26

    (42) T -> F .

    MULT            reduce using rule 42 (T -> F .)
    DIV             reduce using rule 42 (T -> F .)
    PLUS            reduce using rule 42 (T -> F .)
    MINUS           reduce using rule 42 (T -> F .)
    PEND            reduce using rule 42 (T -> F .)
    RPAREN          reduce using rule 42 (T -> F .)
    SUBPROCEDURE    reduce using rule 42 (T -> F .)
    IN              reduce using rule 42 (T -> F .)
    PRINT           reduce using rule 42 (T -> F .)
    IF              reduce using rule 42 (T -> F .)
    WHILE           reduce using rule 42 (T -> F .)
    DO              reduce using rule 42 (T -> F .)
    FOR             reduce using rule 42 (T -> F .)
    LPAREN          reduce using rule 42 (T -> F .)
    NINT            reduce using rule 42 (T -> F .)
    NFLOAT          reduce using rule 42 (T -> F .)
    ID              reduce using rule 42 (T -> F .)
    SUBEND          reduce using rule 42 (T -> F .)
    RCURL           reduce using rule 42 (T -> F .)
    DIM             reduce using rule 42 (T -> F .)
    LET             reduce using rule 42 (T -> F .)


state 27

    (44) F -> NINT .

    MULT            reduce using rule 44 (F -> NINT .)
    DIV             reduce using rule 44 (F -> NINT .)
    PLUS            reduce using rule 44 (F -> NINT .)
    MINUS           reduce using rule 44 (F -> NINT .)
    PEND            reduce using rule 44 (F -> NINT .)
    RPAREN          reduce using rule 44 (F -> NINT .)
    SUBPROCEDURE    reduce using rule 44 (F -> NINT .)
    IN              reduce using rule 44 (F -> NINT .)
    PRINT           reduce using rule 44 (F -> NINT .)
    IF              reduce using rule 44 (F -> NINT .)
    WHILE           reduce using rule 44 (F -> NINT .)
    DO              reduce using rule 44 (F -> NINT .)
    FOR             reduce using rule 44 (F -> NINT .)
    LPAREN          reduce using rule 44 (F -> NINT .)
    NINT            reduce using rule 44 (F -> NINT .)
    NFLOAT          reduce using rule 44 (F -> NINT .)
    ID              reduce using rule 44 (F -> NINT .)
    SUBEND          reduce using rule 44 (F -> NINT .)
    RCURL           reduce using rule 44 (F -> NINT .)
    DIM             reduce using rule 44 (F -> NINT .)
    LET             reduce using rule 44 (F -> NINT .)


state 28

    (45) F -> NFLOAT .

    MULT            reduce using rule 45 (F -> NFLOAT .)
    DIV             reduce using rule 45 (F -> NFLOAT .)
    PLUS            reduce using rule 45 (F -> NFLOAT .)
    MINUS           reduce using rule 45 (F -> NFLOAT .)
    PEND            reduce using rule 45 (F -> NFLOAT .)
    RPAREN          reduce using rule 45 (F -> NFLOAT .)
    SUBPROCEDURE    reduce using rule 45 (F -> NFLOAT .)
    IN              reduce using rule 45 (F -> NFLOAT .)
    PRINT           reduce using rule 45 (F -> NFLOAT .)
    IF              reduce using rule 45 (F -> NFLOAT .)
    WHILE           reduce using rule 45 (F -> NFLOAT .)
    DO              reduce using rule 45 (F -> NFLOAT .)
    FOR             reduce using rule 45 (F -> NFLOAT .)
    LPAREN          reduce using rule 45 (F -> NFLOAT .)
    NINT            reduce using rule 45 (F -> NFLOAT .)
    NFLOAT          reduce using rule 45 (F -> NFLOAT .)
    ID              reduce using rule 45 (F -> NFLOAT .)
    SUBEND          reduce using rule 45 (F -> NFLOAT .)
    RCURL           reduce using rule 45 (F -> NFLOAT .)
    DIM             reduce using rule 45 (F -> NFLOAT .)
    LET             reduce using rule 45 (F -> NFLOAT .)


state 29

    (46) F -> VECTOR .

    MULT            reduce using rule 46 (F -> VECTOR .)
    DIV             reduce using rule 46 (F -> VECTOR .)
    PLUS            reduce using rule 46 (F -> VECTOR .)
    MINUS           reduce using rule 46 (F -> VECTOR .)
    PEND            reduce using rule 46 (F -> VECTOR .)
    RPAREN          reduce using rule 46 (F -> VECTOR .)
    SUBPROCEDURE    reduce using rule 46 (F -> VECTOR .)
    IN              reduce using rule 46 (F -> VECTOR .)
    PRINT           reduce using rule 46 (F -> VECTOR .)
    IF              reduce using rule 46 (F -> VECTOR .)
    WHILE           reduce using rule 46 (F -> VECTOR .)
    DO              reduce using rule 46 (F -> VECTOR .)
    FOR             reduce using rule 46 (F -> VECTOR .)
    LPAREN          reduce using rule 46 (F -> VECTOR .)
    NINT            reduce using rule 46 (F -> VECTOR .)
    NFLOAT          reduce using rule 46 (F -> VECTOR .)
    ID              reduce using rule 46 (F -> VECTOR .)
    SUBEND          reduce using rule 46 (F -> VECTOR .)
    RCURL           reduce using rule 46 (F -> VECTOR .)
    DIM             reduce using rule 46 (F -> VECTOR .)
    LET             reduce using rule 46 (F -> VECTOR .)


state 30

    (47) F -> MATRIX .

    MULT            reduce using rule 47 (F -> MATRIX .)
    DIV             reduce using rule 47 (F -> MATRIX .)
    PLUS            reduce using rule 47 (F -> MATRIX .)
    MINUS           reduce using rule 47 (F -> MATRIX .)
    PEND            reduce using rule 47 (F -> MATRIX .)
    RPAREN          reduce using rule 47 (F -> MATRIX .)
    SUBPROCEDURE    reduce using rule 47 (F -> MATRIX .)
    IN              reduce using rule 47 (F -> MATRIX .)
    PRINT           reduce using rule 47 (F -> MATRIX .)
    IF              reduce using rule 47 (F -> MATRIX .)
    WHILE           reduce using rule 47 (F -> MATRIX .)
    DO              reduce using rule 47 (F -> MATRIX .)
    FOR             reduce using rule 47 (F -> MATRIX .)
    LPAREN          reduce using rule 47 (F -> MATRIX .)
    NINT            reduce using rule 47 (F -> MATRIX .)
    NFLOAT          reduce using rule 47 (F -> MATRIX .)
    ID              reduce using rule 47 (F -> MATRIX .)
    SUBEND          reduce using rule 47 (F -> MATRIX .)
    RCURL           reduce using rule 47 (F -> MATRIX .)
    DIM             reduce using rule 47 (F -> MATRIX .)
    LET             reduce using rule 47 (F -> MATRIX .)


state 31

    (48) F -> ID .
    (34) VECTOR -> ID . LBRACK NUMTYPE RBRACK
    (35) MATRIX -> ID . LBRACK NUMTYPE COMMA NUMTYPE RBRACK

    MULT            reduce using rule 48 (F -> ID .)
    DIV             reduce using rule 48 (F -> ID .)
    PLUS            reduce using rule 48 (F -> ID .)
    MINUS           reduce using rule 48 (F -> ID .)
    PEND            reduce using rule 48 (F -> ID .)
    RPAREN          reduce using rule 48 (F -> ID .)
    SUBPROCEDURE    reduce using rule 48 (F -> ID .)
    IN              reduce using rule 48 (F -> ID .)
    PRINT           reduce using rule 48 (F -> ID .)
    IF              reduce using rule 48 (F -> ID .)
    WHILE           reduce using rule 48 (F -> ID .)
    DO              reduce using rule 48 (F -> ID .)
    FOR             reduce using rule 48 (F -> ID .)
    LPAREN          reduce using rule 48 (F -> ID .)
    NINT            reduce using rule 48 (F -> ID .)
    NFLOAT          reduce using rule 48 (F -> ID .)
    ID              reduce using rule 48 (F -> ID .)
    SUBEND          reduce using rule 48 (F -> ID .)
    RCURL           reduce using rule 48 (F -> ID .)
    DIM             reduce using rule 48 (F -> ID .)
    LET             reduce using rule 48 (F -> ID .)
    LBRACK          shift and go to state 49


state 32

    (5) P -> SUBPROCEDURE LPAREN . ID RPAREN V P S SUBEND

    ID              shift and go to state 50


state 33

    (6) P -> IN LPAREN . NUMTYPE RPAREN S
    (24) NUMTYPE -> . ID
    (25) NUMTYPE -> . NINT
    (26) NUMTYPE -> . NFLOAT

    ID              shift and go to state 52
    NINT            shift and go to state 53
    NFLOAT          shift and go to state 54

    NUMTYPE                        shift and go to state 51

state 34

    (7) P -> PRINT LPAREN . NUMTYPE RPAREN S
    (24) NUMTYPE -> . ID
    (25) NUMTYPE -> . NINT
    (26) NUMTYPE -> . NFLOAT

    ID              shift and go to state 52
    NINT            shift and go to state 53
    NFLOAT          shift and go to state 54

